--- a/Desenvolvimento Front-End/bloco_11_IntroducaoAReact/dia02-ComponentsReact/my-pokedex/src/Pokemon.css
+++ b/Desenvolvimento Front-End/bloco_11_IntroducaoAReact/dia02-ComponentsReact/my-pokedex/src/Pokemon.css
@@ -1,14 +1,48 @@
-.card {
-  display: inline-block;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+*{
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
+}
+body{ 
+  background-color: #fefefe;
+  font-family: sans-serif;
+}
+.container{
+  width: 90%;
+  margin: 50px;
+}
+.heading{
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 50px;
+}
+.row{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-around;
+ flex-flow: wrap;
+}
+.card{
+  width: 20%;
+  background:#fff;
+  border:1px solid #ccc;
+  margin-bottom: 50px;
   transition: 0.3s;
-  border-radius: 5px;
+}
+.card-header{
+  text-align: center;
+  padding: 50px 10px;
+  background: linear-gradient(to right,#ff416c,#ff4b2b);
+  color:#fff;
+
+}
+.card-body{
+  padding: 30px 20px;
+  text-align: center;
+  font-size: 30px;
 }
 
-.card:hover {
-  box-shadow: 10 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.container {
-  padding: 2px 16px;
+.card:hover{
+  transform: scale(1.05);
+  box-shadow: 0 0 40px -10px rgbared(0,0, 0, 0.25);
 }
